correctly show shifts

--- a/src/cipher-vis.sass
+++ b/src/cipher-vis.sass
@@ -69,16 +69,17 @@ body
 
 	#shifts
 
-		display: none
-
 		.shift
 			float: left
 			position: relative
 			top: 5px
 			right: 20px
 
-		.shift_container > .code_line
-			display: inline-block
+		.shift_container
+			display: none
+
+			> .code_line
+				display: inline-block
 
 
 #box
